objects/SO_Commissioning_Request__c.object
<CustomObject>
    <label>Commissioning Request</label>
    <nameField>
        <displayFormat>REQ-{00000000}</displayFormat>
        <label>Commissioning Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissioning Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Ending__c</fullName>
        <label>Ending</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Resv_End__c</fullName>
        <formula>SO_Reservation__r.B25__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Starting__c</fullName>
        <label>Starting</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Tour_Type__c</fullName>
        <label>Tour Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Commission_Tour_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Resv_Start__c</fullName>
        <formula>SO_Reservation__r.B25__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Room_Setup__c</fullName>
        <label>Room Setup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Teams_Link__c</fullName>
        <formula>HYPERLINK( SO_Reservation__r.SO_Teams_Link__c , &apos;Click here to join the meeting&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teams Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_AV_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AV Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissioning Requests</relationshipLabel>
        <relationshipName>SO_Commissioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Reservation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation</label>
        <referenceTo>B25__Reservation__c</referenceTo>
        <relationshipLabel>Commissioning Requests</relationshipLabel>
        <relationshipName>Commissioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_Commission_Booking_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Env_Base_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO_Env_Base_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_PPE_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPE Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Closed_Reason__c</fullName>
        <formula>TEXT( SO_Reservation__r.SO_Closed_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Est_Attendees__c</fullName>
        <label>Est. Attendees</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Resrv_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commissioning Requests</relationshipLabel>
        <relationshipName>Commissioning_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Resv_End_Time__c</fullName>
        <formula>SO_Reservation__r.B25__Local_End_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Duration_hours__c</fullName>
        <label>Duration (hours)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Host_Name__c</fullName>
        <formula>SO_Reservation__r.SO_Host__r.FirstName &amp; &quot; &quot; &amp; SO_Reservation__r.SO_Host__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Host_Role__c</fullName>
        <formula>SO_Reservation__r.SO_Host__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Submit_Message__c</fullName>
        <formula>$Label.SO_Submit_Commission_Request</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Host_Image_Link__c</fullName>
        <formula>SO_Reservation__r.SO_Host__r.SO_Head_shot_Public_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Image Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Start_Time__c</fullName>
        <formula>SO_Reservation__r.B25__Local_Start_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Special_Requests__c</fullName>
        <label>Special Requests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Catering_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Catering Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Model_of_Interest__c</fullName>
        <formula>SO_Opportunity__r.SO_Model__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model of Interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Start_String__c</fullName>
        <formula>CASE(
  MOD( DATEVALUE( SO_Reservation__r.B25__StartLocal__c ) - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday &quot;,
  1, &quot;Monday &quot;,
  2, &quot;Tuesday &quot;,
  3, &quot;Wednesday &quot;,
  4, &quot;Thursday &quot;,
  5, &quot;Friday &quot;, 
  &quot;Saturday &quot;
) &amp; TEXT(DAY(DATEVALUE( SO_Reservation__r.B25__StartLocal__c ))) &amp; CASE(
  MONTH( DATEVALUE( SO_Reservation__r.B25__StartLocal__c )),
  1, &quot; January &quot;,
  2, &quot; February &quot;,
  3, &quot; March &quot;,
  4, &quot; April &quot;,
  5, &quot; May &quot;,
  6, &quot; June &quot;,
  7, &quot; July &quot;,
  8, &quot; August &quot;,
  9, &quot; September &quot;,
  10, &quot; October &quot;,
  11, &quot; November &quot;,
  &quot; December &quot;
) &amp; TEXT(YEAR(DATEVALUE( SO_Reservation__r.B25__StartLocal__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Start String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Max_Attendees__c</fullName>
        <formula>SO_Reservation__r.SO_VIP_Max_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Attendees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity_Reference__c</fullName>
        <formula>SO_Opportunity__r.SO_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Resv_Contact_Greeting__c</fullName>
        <formula>IF( ISBLANK(TEXT( SO_Resrv_Contact__r.Salutation )) , SO_Resrv_Contact__r.LastName,
IF( ISPICKVAL(SO_Resrv_Contact__r.Salutation, &apos;Other&apos;),
SO_Resrv_Contact__r.Salutation_Other__c &amp; &quot; &quot; &amp; SO_Resrv_Contact__r.LastName , TEXT(SO_Resrv_Contact__r.Salutation) &amp; &quot; &quot; &amp; SO_Resrv_Contact__r.LastName)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Contact Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Includes_Classic_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes Classic Visit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Resrv_Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservation Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Commissioning Requests (Reservation Secondary Contact)</relationshipLabel>
        <relationshipName>Commissioning_Requests_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Reservation_Contact_Email__c</fullName>
        <formula>SO_Resrv_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Contact Email</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SO_Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Bespoke</fullName>
        <active>true</active>
        <label>Bespoke</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Private_Office</fullName>
        <active>true</active>
        <label>Private Office</label>
    </recordTypes>
    <validationRules>
        <fullName>End_before_Start</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Ending__c &lt;  SO_Starting__c</errorConditionFormula>
        <errorMessage>The proposed time window end date cannot be before the start date</errorMessage>
    </validationRules>
</CustomObject>